tests/spec/emit/snapshots/declare_result_var_tracked_as_declared.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let _ = if true { 1 } else { 2 }
    let tmp_1 = 3
    let _ = tmp_1
  }
---
package main

func main() {
	var tmp int
	if true {
		tmp = 1
	} else {
		tmp = 2
	}
	_ = tmp
}
