tests/spec/emit/snapshots/defaulted_let_that_calls_a_function_of_its_own_name_keeps_a_temp.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:strconv"
  
  fn n() -> int { 9 }
  
  fn seven() -> int {
    let n = strconv.Atoi("bad").unwrap_or(n())
    n
  }
---
package main

import "strconv"

func n() int {
	return 9
}

func seven() int {
	ret, err := strconv.Atoi("bad")
	default_1 := n()
	if err != nil {
		ret = default_1
	}
	n_1 := ret
	return n_1
}
