tests/spec/emit/snapshots/defer_channel_send.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() {
    let ch = Channel.new<int>();
    defer ch.send(42)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	ch := make(chan int)
	defer lisette.ChannelSend(ch, 42)
}
