tests/spec/emit/snapshots/defer_in_function_with_return.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn test() -> int {
    defer fmt.Print("cleanup");
    42
  }
---
package main

import "fmt"

func test() int {
	defer fmt.Print("cleanup")
	return 42
}
