tests/spec/emit/snapshots/defer_in_if_block.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:fmt"
  
  fn test(flag: bool) {
    if flag {
      defer fmt.Println("cleanup")
      fmt.Println("work")
    }
    fmt.Println("after if")
  }
---
package main

import "fmt"

func test(flag bool) {
	if flag {
		defer fmt.Println("cleanup")
		fmt.Println("work")
	}
	fmt.Println("after if")
}
