tests/spec/emit/snapshots/defer_in_nested_block.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn record(acc: mut Ref<int>, digit: int) {
    acc.* = acc.* * 10 + digit
  }
  
  fn test() -> int {
    let mut acc = 0;
    {
      defer record(&acc, 1);
      record(&acc, 2)
    };
    record(&acc, 3);
    acc
  }
---
package main

func record(acc *int, digit int) {
	*acc = *acc*10 + digit
}

func test() int {
	acc := 0
	{
		defer record(&acc, 1)
		record(&acc, 2)
	}
	record(&acc, 3)
	return acc
}
