tests/spec/emit/snapshots/defer_native_method_iife_evaluates_argument_eagerly.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn mark() -> int {
    2
  }
  
  fn test() {
    let mut xs = [1]
    defer xs.append(mark())
  }
---
package main

func mark() int {
	return 2
}

func test() {
	xs := []int{1}
	arg := mark()
	defer func() {
		_ = append(xs[:len(xs):len(xs)], arg)
	}()
}
