tests/spec/emit/snapshots/defer_native_method_iife_evaluates_receiver_eagerly.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn get_items() -> Slice<int> {
    [1]
  }
  
  fn test() {
    defer get_items().length()
  }
---
package main

func getItems() []int {
	return []int{1}
}

func test() {
	arg := getItems()
	defer func() {
		_ = len(arg)
	}()
}
