tests/spec/emit/snapshots/defer_native_method_iife_snapshots_deref_receiver.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn run(out: mut Ref<mut Slice<int>>) {
    defer out.copy_from([1, 2, 3])
    out.* = [7, 7, 7, 7, 7]
  }
---
package main

func run(out *[]int) {
	arg := *out
	defer func() {
		_ = copy(arg, []int{1, 2, 3})
	}()
	*out = []int{7, 7, 7, 7, 7}
}
